etl pipeline done

--- a/notebooks/ML Pipeline Preparation.ipynb
+++ b/notebooks/ML Pipeline Preparation.ipynb
@@ -14,24 +14,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /home/juzun/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package wordnet to /home/juzun/nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     /home/juzun/nltk_data...\n",
+      "[nltk_data]   Package averaged_perceptron_tagger is already up-to-\n",
+      "[nltk_data]       date!\n"
+     ]
+    }
+   ],
    "source": [
-    "# import libraries\n"
+    "# import libraries\n",
+    "import nltk\n",
+    "\n",
+    "nltk.download([\"punkt\", \"wordnet\", \"averaged_perceptron_tagger\"])\n",
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "import sqlalchemy\n",
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import re\n",
+    "import pickle\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from nltk.stem import WordNetLemmatizer, PorterStemmer\n",
+    "from nltk.corpus import stopwords\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier\n",
+    "from sklearn.pipeline import Pipeline, FeatureUnion\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from sklearn.multioutput import MultiOutputClassifier\n",
+    "from sklearn.feature_extraction.text import (\n",
+    "    CountVectorizer,\n",
+    "    TfidfTransformer,\n",
+    "    TfidfVectorizer,\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# load data from database\n",
-    "engine = create_engine('sqlite:///InsertDatabaseName.db')\n",
-    "df = \n",
-    "X = \n",
-    "Y = "
+    "current_path = Path.cwd()\n",
+    "parent_path = current_path.parent\n",
+    "database_filepath = \"data/DisasterResponse\"\n",
+    "engine = create_engine(f\"sqlite:///{parent_path / database_filepath}.db\")\n",
+    "df = pd.read_sql(\n",
+    "    f\"select * from {sqlalchemy.inspect(engine).get_table_names()[0]}\", engine\n",
+    ")\n",
+    "\n",
+    "target_columns = []\n",
+    "for col in df.columns:\n",
+    "    if col not in [\"id\", \"message\", \"genre\", \"original\"]:\n",
+    "        target_columns.append(col)\n",
+    "\n",
+    "X = df[\"message\"]\n",
+    "Y = df[target_columns]"
    ]
   },
   {
@@ -43,12 +94,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
+    "lemmatizer = WordNetLemmatizer()\n",
+    "stop_words = stopwords.words(\"english\")\n",
+    "\n",
+    "\n",
     "def tokenize(text):\n",
-    "    pass"
+    "    url_regex = (\n",
+    "        \"http[s]?://(?:[a-zA-Z]|[0-9]|[$-_@.&+]|[!*\\(\\),]|(?:%[0-9a-fA-F][0-9a-fA-F]))+\"\n",
+    "    )\n",
+    "    detected_urls = re.findall(url_regex, text)\n",
+    "\n",
+    "    for url in detected_urls:\n",
+    "        text = text.replace(url, \"urlplaceholder\")\n",
+    "\n",
+    "    tokens = word_tokenize(text)\n",
+    "\n",
+    "    stemmed_tokens = [PorterStemmer().stem(token) for token in tokens]\n",
+    "\n",
+    "    cleaned_tokens = [\n",
+    "        lemmatizer.lemmatize(token).lower().strip()\n",
+    "        for token in stemmed_tokens\n",
+    "        if token not in stop_words\n",
+    "    ]\n",
+    "\n",
+    "    return cleaned_tokens"
    ]
   },
   {
@@ -183,7 +256,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "disaster-response-pipeline-SIR6n7dM-py3.10",
    "language": "python",
    "name": "python3"
   },
@@ -197,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
