linting, finalized pipelines

--- a/notebooks/ETL Pipeline Preparation.ipynb
+++ b/notebooks/ETL Pipeline Preparation.ipynb
@@ -5,11 +5,8 @@
    "metadata": {},
    "source": [
     "# ETL Pipeline Preparation\n",
-    "Follow the instructions below to help you create your ETL pipeline.\n",
-    "### 1. Import libraries and load datasets.\n",
-    "- Import Python libraries\n",
-    "- Load `messages.csv` into a dataframe and inspect the first few lines.\n",
-    "- Load `categories.csv` into a dataframe and inspect the first few lines."
+    "\n",
+    "### 1. Import libraries and load datasets."
    ]
   },
   {
@@ -316,9 +313,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Merge datasets.\n",
-    "- Merge the messages and categories datasets using the common id\n",
-    "- Assign this combined dataset to `df`, which will be cleaned in the following steps"
+    "### 2. Merge datasets."
    ]
   },
   {
@@ -506,10 +501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Split `categories` into separate category columns.\n",
-    "- Split the values in the `categories` column on the `;` character so that each value becomes a separate column. You'll find [this method](https://pandas.pydata.org/pandas-docs/version/0.23/generated/pandas.Series.str.split.html) very helpful! Make sure to set `expand=True`.\n",
-    "- Use the first row of categories dataframe to create column names for the categories data.\n",
-    "- Rename columns of `categories` with new column names."
+    "### 3. Split `categories` into separate category columns."
    ]
   },
   {
@@ -1145,9 +1137,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Convert category values to just numbers 0 or 1.\n",
-    "- Iterate through the category columns in df to keep only the last character of each string (the 1 or 0). For example, `related-0` becomes `0`, `related-1` becomes `1`. Convert the string to a numeric value.\n",
-    "- You can perform [normal string actions on Pandas Series](https://pandas.pydata.org/pandas-docs/stable/text.html#indexing-with-str), like indexing, by including `.str` after the Series. You may need to first convert the Series to be of type string, which you can do with `astype(str)`."
+    "### 4. Convert category values to just numbers 0 or 1."
    ]
   },
   {
@@ -1531,9 +1521,7 @@
     }
    ],
    "source": [
-    "categories_split = categories_split.apply(\n",
-    "    lambda col: col.str.split(\"-\").str[1].astype(int)\n",
-    ")\n",
+    "categories_split = categories_split.apply(lambda col: col.str.split(\"-\").str[1].astype(int))\n",
     "categories_split"
    ]
   },
@@ -1541,9 +1529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Replace `categories` column in `df` with new category columns.\n",
-    "- Drop the categories column from the df dataframe since it is no longer needed.\n",
-    "- Concatenate df and categories data frames."
+    "### 5. Replace `categories` column in `df` with new category columns."
    ]
   },
   {
@@ -1956,10 +1942,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. Remove duplicates.\n",
-    "- Check how many duplicates are in this dataset.\n",
-    "- Drop the duplicates.\n",
-    "- Confirm duplicates were removed."
+    "### 6. Remove duplicates."
    ]
   },
   {
@@ -2007,8 +1990,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. Save the clean dataset into an sqlite database.\n",
-    "You can do this with pandas [`to_sql` method](https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.to_sql.html) combined with the SQLAlchemy library. Remember to import SQLAlchemy's `create_engine` in the first cell of this notebook to use it below."
+    "### 7. Save the clean dataset into an sqlite database."
    ]
   },
   {
@@ -2038,17 +2020,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_df = pd.read_sql(\n",
-    "    f\"select * from {sqlalchemy.inspect(engine).get_table_names()[0]}\", engine\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 8. Use this notebook to complete `process_data.py`\n",
-    "Use the template file attached in the Resources folder to write a script that runs the steps above to create a database based on new datasets specified by the user. Alternatively, you can complete `process_data.py` in the classroom on the `Project Workspace IDE` coming later."
+    "load_df = pd.read_sql(f\"select * from {sqlalchemy.inspect(engine).get_table_names()[0]}\", engine)"
    ]
   },
   {
