--- a/notebooks/run.ipynb
+++ b/notebooks/run.ipynb
@@ -204,9 +204,7 @@
     }
    ],
    "source": [
-    "data_loaded = load_data(\n",
-    "    messages_filepath=messages_path, categories_filepath=categories_path\n",
-    ")\n",
+    "data_loaded = load_data(messages_filepath=messages_path, categories_filepath=categories_path)\n",
     "data_loaded"
    ]
   },
